--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -1186,19 +1186,19 @@
     <string name="Kicked_From_Game_">あなたはルームから追い出されました！</string>
     <string name="Conquest">Conquest</string>
     <string name="Finish_the_last_mission_in_the_campaign_">Finish the last mission in the campaign.</string>
-    <string name="Collected_">Collected:</string>
-    <string name="Collisions_">Collisions:</string>
-    <string name="Absorbed_">Absorbed:</string>
+    <string name="Collected_">を収集した回数:</string>
+    <string name="Collisions_">への衝突回数:</string>
+    <string name="Absorbed_">を吸収した回数:</string>
     <string name="team_warning">Teaming up with a player that is not on your team will result in a ban!</string>
     <string name="Search_Filter">Search Filter</string>
-    <string name="Received_">受け取った回数:</string>
+    <string name="Received_">を受け取った回数:</string>
     <string name="Opponent_Rating_Limit_">Opponent Rating Limit:</string>
     <string name="TOGGLE_FAVORITE">お気に入りを切り替える</string>
     <string name="Favorited">お気に入りに追加</string>
     <string name="Unfavorited">お気に入りから削除</string>
-    <string name="Background_Scale_">Background Scale:</string>
-    <string name="Background_Lightness_">Background Lightness:</string>
-    <string name="Background_Image_">Background Image:</string>
+    <string name="Background_Scale_">背景スケール:</string>
+    <string name="Background_Lightness_">背景の明るさ:</string>
+    <string name="Background_Image_">背景画像:</string>
     <string name="INVERT_SELECTION">INVERT\nSELECTION</string>
     <string name="MINIMAP">ミニマップ</string>
     <string name="Victorious">Victorious</string>
@@ -1227,10 +1227,10 @@
     <string name="x4_Clan_XP_1_Day">クラン経験値4倍1日間</string>
     <string name="CHARGE_UP">チャージアップ</string>
     <string name="CLAN_DESCRIPTION_COLOR">クランの説明カラー</string>
-    <string name="Responsible_Pet_Owner">Responsible Pet Owner</string>
-    <string name="Animal_Tamer">Animal Tamer</string>
-    <string name="Crocodile_Hunter">Crocodile Hunter</string>
-    <string name="Get_A_Pet_To_Level_X_">Get A Pet To Level %d.</string>
+    <string name="Responsible_Pet_Owner">ペットの担当オーナー</string>
+    <string name="Animal_Tamer">アニマルタマー</string>
+    <string name="Crocodile_Hunter">ワニハンター</string>
+    <string name="Get_A_Pet_To_Level_X_">一匹のペットをレベル%dに到達する</string>
     <string name="plasma_boost_info">"You gain three times plasma from all IN-GAME sources while the boost is active! This includes arena  and tournament winnings! Does NOT work on plasma purchases, spins, or special rewards."</string>
     <string name="Plasma_Boost_7_Days_">プラズマブースト7日間！！</string>
     <string name="Plasma_Boost_1_Day_">プラズマブースト1日間！</string>
@@ -1242,15 +1242,15 @@
     <string name="You_Have_Mail_">あなたは%sからメールがあります！</string>
     <string name="Clan_Request_Reviewed_Notification">Your Request To Join Clan %s Been Reviewed!</string>
     <string name="CRAZY_SPLIT">CRAZY スプリット32x</string>
-    <string name="Sold_Community_Skins_">"Sold Community Skins: "</string>
-    <string name="Estimated_Earnings_">"Estimated Earnings: "</string>
+    <string name="Sold_Community_Skins_">"コミュニティスキン販売した回数: "</string>
+    <string name="Estimated_Earnings_">"予想獲得: "</string>
     <string name="South_Africa">南アフリカ</string>
-    <string name="SPLIT_">スプリット：</string>
+    <string name="SPLIT_">スプリット:</string>
     <string name="WALLS">壁</string>
     <string name="COMP_BANNED">競技に禁止された</string>
-    <string name="FIND_GAMES">ゲームを検索する</string>
-    <string name="PLAY_SOLO">一人をプレイする</string>
-    <string name="SET_EMOTE">絵文字を設定する</string>
+    <string name="FIND_GAMES">ゲームを検索</string>
+    <string name="PLAY_SOLO">一人をプレイ</string>
+    <string name="SET_EMOTE">絵文字を設定</string>
     <string name="Winner_Winner_Chicken_Dinner">Winner Winner Chicken Dinner!</string>
     <string name="Win_a_Battle_Royale_">Win a Battle Royale.</string>
     <string name="Battle_">Battle!</string>
@@ -1276,8 +1276,8 @@
 !info"
 </string>
     <string name="ID_Sort">ID Sort</string>
-    <string name="Master_Tamer">Master Tamer</string>
-    <string name="Get_ALL_Pets_To_Level_100_">Get ALL Pets To Level 100</string>
+    <string name="Master_Tamer">マスタータマー</string>
+    <string name="Get_ALL_Pets_To_Level_100_">全てのペットをレベル100に到達する</string>
     <string name="TAMER">タマー</string>
     <string name="Allow_Recombine">Allow Recombine</string>
     <string name="Defenders">Defenders</string>
