--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -1057,17 +1057,17 @@
     <string name="ENEMY">敵</string>
     <string name="ALLY">ALLY</string>
     <string name="Rename">名前を変更する</string>
-    <string name="Set_friendly_name_">Set friendly name.</string>
-    <string name="Leave_blank_for_none_">Leave blank for none.</string>
+    <string name="Set_friendly_name_">フレンドリーネームを設定してください。</string>
+    <string name="Leave_blank_for_none_">空欄のままにすると、デフォルトになります。</string>
     <string name="Vote_Kick">プレイヤーをルームから追い出す</string>
     <string name="FONT">フォント</string>
     <string name="CIRCLE">丸</string>
     <string name="SQUARES">四角</string>
     <string name="TRICK_MODE">トリックモード</string>
-    <string name="ICE_SPLIT">ICE SPLIT</string>
-    <string name="TRICK_SPLIT">TRICK SPLIT</string>
-    <string name="POP_SPLIT">POP SPLIT</string>
-    <string name="PUSH_SPLIT">PUSH SPLIT</string>
+    <string name="ICE_SPLIT">アイス・スプリット</string>
+    <string name="TRICK_SPLIT">トリック・スプリット</string>
+    <string name="POP_SPLIT">ポップ・スプリット</string>
+    <string name="PUSH_SPLIT">プッシュ・スプリット</string>
     <string name="Level_Colors">レベルカラー</string>
     <string name="click_info">オートクリックまたはウルトラクリックは『個人戦（クラシック）』で機能しません！</string>
     <string name="Hooked">Hooked</string>
