--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -1242,7 +1242,7 @@
     <string name="You_Have_Mail_">あなたは%sからメールがあります！</string>
     <string name="Clan_Request_Reviewed_Notification">Your Request To Join Clan %s Been Reviewed!</string>
     <string name="CRAZY_SPLIT">CRAZY スプリット32x</string>
-    <string name="Sold_Community_Skins_">"コミュニティスキン販売した回数: "</string>
+    <string name="Sold_Community_Skins_">"販売したコミュニティスキン数: "</string>
     <string name="Estimated_Earnings_">"予想獲得: "</string>
     <string name="South_Africa">南アフリカ</string>
     <string name="SPLIT_">スプリット:</string>
