--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -1191,7 +1191,7 @@
     <string name="Absorbed_">を吸収した数:</string>
     <string name="team_warning">Teaming up with a player that is not on your team will result in a ban!</string>
     <string name="Search_Filter">Search Filter</string>
-    <string name="Received_">を受け取った回数:</string>
+    <string name="Received_">を受け取った数:</string>
     <string name="Opponent_Rating_Limit_">Opponent Rating Limit:</string>
     <string name="TOGGLE_FAVORITE">お気に入りスキンを切り替える</string>
     <string name="Favorited">お気に入りスキンに追加</string>
