--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -1109,13 +1109,13 @@
     <string name="group_chat_create" translatable="true" tools:ignore="Untranslatable">このグループIDを友だちに送ることができます:</string>
     <string name="Specify_Group_ID" translatable="true" tools:ignore="Untranslatable">グループIDを入力</string>
     <string name="Failed">失敗</string>
-    <string name="Joined_group_" translatable="true" tools:ignore="Untranslatable">グループに参加済み</string/>
+    <string name="Joined_group_" translatable="true" tools:ignore="Untranslatable">グループに参加しました</string>
     <string name="People" translatable="true" tools:ignore="Untranslatable">人々</string>
     <string name="Failed_to_join">参加に失敗</string>
     <string name="Full">Full</string>
     <string name="new_person_joined" translatable="true" tools:ignore="Untranslatable">一人が参加しました！</string>
     <string name="person_left" translatable="true" tools:ignore="Untranslatable">一人が退出しました！</string>
-    <string name="Left_the_group" translatable="true" tools:ignore="Untranslatable">グループに退出済み</string>
+    <string name="Left_the_group" translatable="true" tools:ignore="Untranslatable">グループに退出しました</string>
     <string name="Tricks_Performed_">実行したトリック数:</string>
     <string name="Not_enough_plasma_">プラズマ不足！</string>
     <string name="GET_PLASMA">プラズマを購入</string>
