--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -1008,7 +1008,7 @@
     <string name="_1v1_Pure">1v1 ピュア</string>
     <string name="Allow_Ultraclick">ウルトラクリックを許可</string>
     <string name="Allow_Mass_Boost">マスブーストを許可</string>
-    <string name="Challenges_Won_">チャレンジを勝った回数:</string>
+    <string name="Challenges_Won_">勝ったチャレンジ数:</string>
     <string name="trophy_info">トロフィーはアリーナまたはチームアリーナシーズンの終わりに1位、2位、3位であると獲得されます。トロフィーは多くの選手がいる活発な地域でのみ授与されます。</string>
     <string name="BLOCKED">ブロックされました</string>
     <string name="CLAN_WAR_HISTORY">クラン戦の履歴</string>
@@ -1033,7 +1033,7 @@
     <string name="WORLD_CUP_EVENT___">ワールドカップイベント！</string>
     <string name="world_cup_event_description">ワールドカップ終了までサッカーモードでの経験値2倍とダブルプラズマ！</string>
     <string name="GIF_Skins">GIFスキン</string>
-    <string name="PLAY_ONLINE_">オンラインをプレイ！</string>
+    <string name="PLAY_ONLINE_">オンラインプレイ！</string>
     <string name="Absorb_10_000_000_dots">ドットを1000万個回収</string>
     <string name="Dot_Deity">Dot Deity</string>
     <string name="Mass_Mastery">Mass Mastery</string>
@@ -1097,8 +1097,8 @@
     <string name="SET_PRIVACY">プライバシーを設定</string>
     <string name="ANIMATION">アニメーション</string>
     <string name="Color_Cycle">カラーサイクル</string>
-    <string name="Fast">スロー</string>
-    <string name="Slow">ファスト</string>
+    <string name="Fast">ファスト</string>
+    <string name="Slow">スロー</string>
     <string name="Rainbow">レインボー</string>
     <string name="Horizontal">ホリゾンタル</string>
     <string name="Vertical">バーティカル</string>
@@ -1128,9 +1128,9 @@
     <string name="Requests">リクエスト</string>
     <string name="Invites">招待</string>
     <string name="Show_Spectator_Count">ゲーム内観戦者数を表示</string>
-    <string name="TRY_IT_">TRY IT!</string>
+    <string name="TRY_IT_">スキンを試す！</string>
     <string name="You_need_to_buy_a_pack_to_use_this_">You need to buy a pack to use this.</string>
-    <string name="GET_PACK">GET PACK</string>
+    <string name="GET_PACK">パックを購入</string>
     <string name="Position_in_queue">キューの位置</string>
     <string name="PROFILE_MENU_BACKGROUND_COLOR">PROFILE MENU BACKGROUND COLOR</string>
     <string name="DARK_MATTER">ダークマター</string>
@@ -1157,13 +1157,13 @@
     <string name="Invalid_Clan_ID_">無効なクランID。</string>
     <string name="MUTED">ミュートされました</string>
     <string name="SKIN">スキン</string>
-    <string name="Choose_Skin_Size">Choose Skin Size</string>
+    <string name="Choose_Skin_Size">スキンサイズを選択</string>
     <string name="Other_players_will_not_be_able_to_hear_you_">Other players will not be able to hear you!</string>
     <string name="Allow_permission_to_enable_voice_recording_">Allow permission to enable voice recording.</string>
     <string name="voice_chat_prompt">Content rating of the app may change with voice chat enabled. For best audio use a headset.</string>
     <string name="Only_leader_can_answer_requests_">リーダーのみが要請に応答できます。</string>
     <string name="Sent_request_not_invited_">リクエスト送信済み（未招待）。</string>
-    <string name="REMOVE_SKIN_FROM_COMMUNITY_">コミュニティからこのスキンを削除！</string>
+    <string name="REMOVE_SKIN_FROM_COMMUNITY_">スキンをコミュニティから削除！</string>
     <string name="This_cannot_be_undone_">これは取り消せません！</string>
     <string name="watch_a_video_to_get_a_temporary_boost_for_x_life_">Watch a video to get a temporary boost for %d lives!</string>
     <string name="WATCH_VIDEO_">動画を見る！</string>
@@ -1183,7 +1183,7 @@
     <string name="Max_Tilt_Angle_3D_">Max Tilt Angle 3D:</string>
     <string name="Mode_3D">3Dモード</string>
     <string name="Names_Below_Blobs">ブロブの下にプレイヤー名</string>
-    <string name="Name_Scale_">"Name Scale:"</string>
+    <string name="Name_Scale_">"プレイヤー名スケール:"</string>
     <string name="Button_3D">3Dボタン</string>
     <string name="Hide_Button_">ボタンを非表示にする？</string>
     <string name="Show_Boost_Button">ブーストボタンを表示にする</string>
@@ -1191,8 +1191,8 @@
     <string name="Rainbow_Holes">Rainbow Holes</string>
     <string name="LIFE_STEAL">LIFE STEAL</string>
     <string name="Kicked_From_Game_">あなたはルームから追い出されました！</string>
-    <string name="Conquest">Conquest</string>
-    <string name="Finish_the_last_mission_in_the_campaign_">Finish the last mission in the campaign.</string>
+    <string name="Conquest">コンクエスト</string>
+    <string name="Finish_the_last_mission_in_the_campaign_">キャンペーンでミッション 20 を完了する</string>
     <string name="Collected_">を収集した数:</string>
     <string name="Collisions_">への衝突数:</string>
     <string name="Absorbed_">を吸収した数:</string>
@@ -1244,10 +1244,10 @@
     <string name="Plasma_Boost_2_Hours_">プラズマブースト2時間</string>
     <string name="Plasma_Boost">プラズマブースト</string>
     <string name="particle_info">You must be at least level 50 and use a base skin with particles in order to see any particles.</string>
-    <string name="Plain_Score_Text">"Plain Score Text"</string>
-    <string name="Custom_Skin_Reviewed_Notification">あなたのカスタムスキンは分析しました！</string>
-    <string name="You_Have_Mail_">あなたは%sからメールがあります！</string>
-    <string name="Clan_Request_Reviewed_Notification">Your Request To Join Clan %s Been Reviewed!</string>
+    <string name="Plain_Score_Text">"スコアのシンプルテキスト"</string>
+    <string name="Custom_Skin_Reviewed_Notification">カスタムスキンが受理されました！</string>
+    <string name="You_Have_Mail_">%s から新着メール受信！</string>
+    <string name="Clan_Request_Reviewed_Notification">『%s』クランに参加リクエストが承認されました！</string>
     <string name="CRAZY_SPLIT">CRAZY スプリット32x</string>
     <string name="Sold_Community_Skins_">"販売したコミュニティスキン数: "</string>
     <string name="Estimated_Earnings_">"予想獲得: "</string>
