--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -1244,7 +1244,7 @@
     <string name="Plasma_Boost_2_Hours_">プラズマブースト2時間</string>
     <string name="Plasma_Boost">プラズマブースト</string>
     <string name="particle_info">You must be at least level 50 and use a base skin with particles in order to see any particles.</string>
-    <string name="Plain_Score_Text">"スコアのシンプルテキスト"</string>
+    <string name="Plain_Score_Text">"リーダーボードのシンプルテキスト"</string>
     <string name="Custom_Skin_Reviewed_Notification">カスタムスキンが受理されました！</string>
     <string name="You_Have_Mail_">%s から新着メール受信！</string>
     <string name="Clan_Request_Reviewed_Notification">『%s』クランに参加リクエストが承認されました！</string>
