--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -1255,7 +1255,7 @@
     <string name="SPLIT_">スプリット:</string>
     <string name="WALLS">壁</string>
     <string name="COMP_BANNED">競技に禁止された</string>
-    <string name="FIND_GAMES">他のルームへプレイ</string>
+    <string name="FIND_GAMES">他のルームでプレイ</string>
     <string name="PLAY_SOLO">一人プレイ</string>
     <string name="SET_EMOTE">絵文字を設定</string>
     <string name="Winner_Winner_Chicken_Dinner">Winner Winner Chicken Dinner!</string>
